--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.6.3",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.0.1",
     "sequelize": "^6.34.0"
   }
